Fix Quality Flaws S6204: Replace other '.collect(Collectors.toList())' with '.toList()' and remove unused imports